@@ -1,3 +1,7 @@
+2013-07-05  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Rotation4.h: 
+
 2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Vector3.h:
