@@ -6,6 +6,10 @@
 
 	* Billboard.cpp: 
 
+2013-07-05  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Billboard.cpp: 
+
 2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Selection.h:
