@@ -6,6 +6,10 @@
 
 	* Billboard110.wrl: 
 
+2013-07-05  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Billboard110.wrl: 
+
 2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* WalkViewer.wrl:
